--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -29,7 +29,7 @@
             padding-top:25px;
             width: 125px;
             height: 125px;
-            object-fit:cover;
+            object-fit:scale-down;
         }
 
         .pokemonCardTitle{
