--- a/src/components/CartWidget/CartWidget.scss
+++ b/src/components/CartWidget/CartWidget.scss
@@ -1,23 +1,36 @@
 .logo{
-
     margin-right: 10px;
 
     img{
+        transition: .3s;
         max-width: 35px;
     }
     .number{
+            
+        transition: .3s;
         color: black;
         font-size: 12px;
         user-select: none;
-        margin: -5px 1px 0px 1px;
+        margin: -10px 1px 0px 5px;
         width: 20px;
         height: 20px;
-        padding: 10px;
-        border-radius: 20px;
-        background-color: white;
+        padding: 12px;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
+        background-color: rgb(210, 101, 101);
         display: flex;
         justify-content: center;
         align-items: center;
     }
     
+    &:hover{
+        img{
+            transform: rotateZ(-5deg);
+        }
+
+        .number{
+            background-color: rgb(230, 111, 111);
+        }
+    }
 }
