--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -31,8 +31,8 @@
   padding-top: 25px;
   width: 125px;
   height: 125px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
 }
 .pokemonCardWrapper .pokemonCardContent .pokemonCardTitle {
   font-size: 16px;
