--- a/src/components/ItemDetail/ItemDetail.scss
+++ b/src/components/ItemDetail/ItemDetail.scss
@@ -1,14 +1,62 @@
 .detailCardWrapper{
 
-    width: 45rem;
+    width: 35rem;
     background-color: rgba(182, 72, 72, 0.855) !important;
 
     .detailCardImage{
         width: 150px;
+    }
+    .detailCardContent{
+        .detailCardDescription{
+            text-align:center;
+            padding: 10px;
+        }
+    }
+    .detailCardPrice{
+        display: flex;
+        justify-content: center;
+
+        .price{
+            font-weight: bold;
+        }
+
     }
 }
 
 .detailCardId{
     color: black;
     width: 100%;
+}
+
+.categoryWrapper{
+    text-align: center;
+    .category{
+        font-size: 12px;
+    }
+}
+
+.quantityChoose{
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    margin-bottom: 20px;
+
+    button{
+        margin: 10px;
+    }
+}
+
+.addToCart{
+    background-color: rgb(193, 78, 78) !important;
+    color: black;
+    border: 2px solid black;
+    transition: .4s;
+    font-size: 12px;
+    width: 10rem;
+    &:hover{
+        border-color: rgb(0, 0, 0);
+        background-color: rgb(255, 97, 97) !important;
+        border-radius: 50px;
+        color: black;
+    }
 }
